force-app/main/default/objects/Deployment_PR__c/Deployment_PR__c.object-meta.xml
<CustomObject>
    <label>Deployment PR</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Deployment PR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment PRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>