force-app/main/default/objects/Deployment_PR__c/fields/Deployment_Record__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Record__c</fullName>
    <label>Deployment Record</label>
    <referenceTo>Deployment_Record__c</referenceTo>
    <relationshipLabel>Deployment PRs</relationshipLabel>
    <relationshipName>Deployment_PRs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>