force-app/main/default/objects/Deployment_PR__c/fields/Merged_At__c.field-meta.xml
<CustomField>
    <fullName>Merged_At__c</fullName>
    <label>Merged At</label>
    <type>DateTime</type>
</CustomField>