force-app/main/default/objects/Deployment_PR__c/fields/PR_Author__c.field-meta.xml
<CustomField>
    <fullName>PR_Author__c</fullName>
    <label>PR Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>