force-app/main/default/objects/Deployment_PR__c/fields/PR_Title__c.field-meta.xml
<CustomField>
    <fullName>PR_Title__c</fullName>
    <label>PR Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>