force-app/main/default/objects/Deployment_PR__c/fields/PR_URL__c.field-meta.xml
<CustomField>
    <fullName>PR_URL__c</fullName>
    <label>PR URL</label>
    <type>Url</type>
</CustomField>